--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <link href="contents/bootstrap.min.css" rel="stylesheet" />
     <link href="contents/ng-alertify.css" rel="stylesheet" />
     <link href="contents/angular-material.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+        integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css" />
+    <link type="text/css" rel="stylesheet" href="contents/loading-bar.css" media='all' />
 </head>
 
 <body>
-    <div class="container-fluid">        
+    <div class="container-fluid">
         <ui-view></ui-view>
     </div>
 
@@ -56,6 +57,7 @@
     <script src="scripts/angular-aria.min.js"></script>
     <script src="scripts/angular-material.js"></script>
     <script src="scripts/hotkey.js"></script>
+    <script src="scripts/loading-bar.js"></script>
 
 
     <script src="scripts/jquery-roadmap/jquery.roadmap.js"></script>
