--- a/app/orderDetail.controller.html
+++ b/app/orderDetail.controller.html
@@ -82,6 +82,10 @@
                                 <td colspan="3">{{key}}</td>
                                 <td>{{value.length}}</td>
                             </tr>
+                            <tr>
+                                <td colspan="3"><b>Total</b></td>
+                                <td><b>{{model.selectedOrder.detail.length}}</b></td>
+                            </tr>
                         </table>
                     </div>
                 </div>
