--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <script src="app/order.controller.js"></script>
     <script src="app/orderDetail.controller.js"></script>
     <script src="app/directives/timeline.directive.js"></script>
+    <script src="app/directives/featuredOrder.directive.js"></script>
 
     <script src="app/app.value.js"></script>
 </body>
