--- a/app/order.controller.html
+++ b/app/order.controller.html
@@ -30,13 +30,15 @@
                     </div>
                 </div>
                 <div class="row" style="margin-top: 40px">
-                    <div class="col-5">
+                    <div class="col-4">
                         <input type="text" class="form-control" placeholder="Toocha" ng-model="model.orderName">
                     </div>
                     <div class="col-5">
                         <input type="text" class="form-control" placeholder="https://foody.com/"
                             ng-model="model.menuUrl">
-
+                    </div>
+                    <div class="col-1">
+                        <input type="text" class="form-control" placeholder="5%" ng-model="model.discount">
                     </div>
                     <div class="col-2">
                         <button type="submit" class="btn btn-outline-dark" ng-disabled="!model.menuUrl"
