--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <script src="app/orderDetail.controller.js"></script>
     <script src="app/directives/timeline.directive.js"></script>
     <script src="app/directives/featuredOrder.directive.js"></script>
+    <script src="app/directives/orderInfo.directive.js"></script>
 
     <script src="app/app.value.js"></script>
 </body>
