--- a/app/app.html
+++ b/app/app.html
@@ -3,4 +3,4 @@
     <a class="nav-link" ui-sref-active="active" ui-sref="main.timesheet">Timesheet</a>
     <a class="nav-link" ui-sref-active="active" ui-sref="main.order">Order</a>
 </nav>
-<ui-view></ui-view>
+<div ui-view class="page"></div>
