--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="container-fluid">
-        <ui-view></ui-view>
+        <ui-view class="page"></ui-view>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase.js"></script>
