Add Upload menu image

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
     <script src="app/directives/timeline.directive.js"></script>
     <script src="app/directives/featuredOrder.directive.js"></script>
     <script src="app/directives/orderInfo.directive.js"></script>
+    <script src="app/directives/order.creation.form.js"></script>
+    <script src="app/directives/file.upload.js"></script>
 
     <script src="app/app.value.js"></script>
 </body>
