--- a/app/order.controller.html
+++ b/app/order.controller.html
@@ -4,6 +4,11 @@
             <div class="col-sm">
                 <div class="row">
                     <div class="col">
+                        <order-creation-form></order-creation-form>
+                    </div>
+                </div>
+                <div class="row" style="margin-top: 40px;">                    
+                    <div class="col">
                         <h4>List Order</h4>
                         <ul class="list-group">
                             <a href="" class="list-group-item list-group-item-action" ng-repeat="order in model.orders"
@@ -29,23 +34,7 @@
                             </a>
                         </ul>
                     </div>
-                </div>
-                <div class="row" style="margin-top: 40px">
-                    <div class="col-4">
-                        <input type="text" class="form-control" placeholder="Toocha" ng-model="model.orderName">
-                    </div>
-                    <div class="col-5">
-                        <input type="text" class="form-control" placeholder="https://foody.com/"
-                            ng-model="model.menuUrl">
-                    </div>
-                    <div class="col-1">
-                        <input type="text" class="form-control" placeholder="5%" ng-model="model.discount">
-                    </div>
-                    <div class="col-2">
-                        <button type="submit" class="btn btn-outline-dark" ng-disabled="!model.menuUrl"
-                            ng-click="model.createNewOrder()">Create Order</span>
-                    </div>
-                </div>
+                </div>                
                 <div style="margin-top: 40px">
                     <featured-order items="model.featuredOrders"
                         on-selected-featured-order-change="model.onSelectedFeaturedOrderChange({featuredOrder})"
