--- a/app/directives/file.upload.html
+++ b/app/directives/file.upload.html
@@ -1,2 +1,5 @@
 <input type="file" class="form-control-file">
+<div class="progress" ng-if="showProgressBar">
+    <div id="progressbar" class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
     
