--- a/app/app.html
+++ b/app/app.html
@@ -1,6 +1,21 @@
 <nav class="nav">
-    <a class="nav-link" ui-sref-active="active" ui-sref="main.sprint">Sprint</a>
-    <a class="nav-link" ui-sref-active="active" ui-sref="main.timesheet">Timesheet</a>
-    <a class="nav-link" ui-sref-active="active" ui-sref="main.order">Order</a>
+  <a class="nav-link" ui-sref-active="active" ui-sref="main.sprint">Sprint</a>
+  <a class="nav-link" ui-sref-active="active" ui-sref="main.timesheet">Timesheet</a>
+  <a class="nav-link" ui-sref-active="active" ui-sref="main.bank">Bank</a>
+  <a class="nav-link" ui-sref-active="active" ui-sref="main.order">Order</a>
+  <a class="nav-link" ui-sref-active="active" ui-sref="main.login({returnState: $root.$state.current.name})"
+    ng-if="!model.user">
+    Sign In / Sign Up
+  </a>
+  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+    aria-haspopup="true" aria-expanded="false" ng-if="model.user">
+    {{model.user.displayName}}
+  </a>
+  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+    <a class="dropdown-item" ui-sref="main.account">Account</a>
+    <a class="dropdown-item" ng-click="model.logOut()">Log Out</a>
+  </div>
 </nav>
-<div ui-view class="page"></div>
+<div class="container-fluid" style="margin-top: 40px;">
+  <div ui-view class="page"></div>
+</div>
